[project]
name = "webeng-2-projekt"
version = "0.1.0"
description = "Recipe App for Web Engineering 2 at DHBW Mannheim"
authors = [
    {name = "PixelWelt"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12)",
    "pillow (>=11.2.1)",
    "pathlib (>=1.0.1)",
    "annotated-types (>=0.7.0)",
    "anyio (>=4.9.0)",
    "bcrypt (>=4.3.0)",
    "colorama (>=0.4.6)",
    "distlib (>=0.3.9)",
    "dulwich (>=0.22.8)",
    "jinja2 (>=3.1.6)",
    "passlib (>=1.7.4)",
    "pydantic (>=2.11.4)",
    "pydantic-core (>=2.33.2)",
    "pyjwt (>=2.10.1)",
    "python-multipart (>=0.0.20)",
    "sqlalchemy (>=2.0.40)",
    "sqlmodel (>=0.0.24)",
    "uvicorn (>=0.34.2)",
    "pylint (>=3.3.6,<4.0.0)",
    "slowapi (>=0.1.9,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.development.dependencies]
pre-commit = "^4.2.0"

