[tool.poetry]
name = "webeng-2-projekt"
version = "0.1.0"
description = "Recipe App for Web Engineering 2 at DHBW Mannheim"
authors = ["PixelWelt"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.34.2"
pre-commit = "^4.2.0"
fastapi = "^0.115.12"
pillow = "^11.2.1"
pathlib = "^1.0.1"
annotated-types = "^0.7.0"
anyio = "^4.9.0"
bcrypt = "^4.3.0"
colorama = "^0.4.6"
jinja2 = "^3.1.6"
passlib = "^1.7.4"
pydantic = "^2.11.4"
pyjwt = "^2.10.1"
sqlalchemy = "^2.0.41"
python-multipart = "^0.0.20"
sqlmodel = "^0.0.24"
pylint = "^3.3.7"
slowapi = "^0.1.9"

[poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


